[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "nasdaq-data-link-mcp-os"
version = "0.1.1"
description = "Community maintained and open-source MCP server for the Nasdaq Data Link"
authors = [{ name = "Stefano Amorelli", email = "stefano@amorelli.tech" }]
readme = "README.md"
requires-python = ">=3.7"
license = { file = "LICENSE" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = ["nasdaq-data-link", "pycountry"]

[project.urls]
"Homepage" = "https://github.com/stefanoamorelli/nasdaq-data-link-mcp"
"Bug Tracker" = "https://github.com/stefanoamorelli/nasdaq-data-link-mcp/issues"
